--- a/page.mdx
+++ b/page.mdx
@@ -22,12 +22,12 @@ I was inspired by the Rust programming language, which provides developers with 
 
 The goal of this project is to create a programming language and toolchain to bring modern programming features to datapack development. There is a list of requirements that this project will need to fulfill. Note that this list is likely to expand throughout development:
 
-Package management system
-Module system without header files
-Implicit types, type inference, and type checking
-Type definitions for aliases and structs
-Name resolution for local and global scopes
-Language server
+* Package management system 
+* Module system without header files 
+* Implicit types, type inference, and type checking 
+* Type definitions for aliases and structs 
+* Name resolution for local and global scopes 
+* Language server
 
 # Sub-Design Documents
 
